Not a lot done on this one. Need to write the logic for the buttons still

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Android Exam</string>
+    <string name="Registration">Registration complete</string>
 </resources>
