--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Android Exam</string>
     <string name="Registration">Registration complete</string>
+    <string name="Empty">Error, missing information</string>
 </resources>
